- Converted MyTube to an ImpressCMS 1.3 module
- Tag module plugin
- Styles and classes

Added:
- replaced JW Player with Flowplayer 3.2.7
- captcha to Submit form
- RSS feed
- use of nice urls
- multilanguage support for icons
- automatic creation of folder MyTube folder in 'uploads' upon installation
- submitted videos will add to user posts
- support for videoclips from National Geographic

Fixed:
- submission disclaimer form buttons not working
- editing of video not possible due to unknown function mytube() in admin/index.php
- Submit button in toolbar not working
- Approve option for submitted video
- errors in Spanish translation [Debianus]
- broken report will be deleted when video is deleted
- category selection menu in block settings
- listing of sub categories
- captcha issue
- acknowledging of broken videos
- errors in rating form. IP addresses will be stored as IP-numbers instead of dotted numbers.

Removed:
- support for Google Video
- Simpy and Spurl from social bookmarks
- link to Submit a Bug in About page
- sponsoring of categories (banners)

Removed files:
- bugfixlist.txt
- admin/admin.php
- admin/myblockform.php
- admin/myblocksadmin.php
- admin/myblocksadmin.txt
- admin/mygroupperm.php
- admin/mygrouppermform.php
- blocks/mytube_banner.php
- images/sbookmarks/simpy.png
- images/sbookmarks/spurl.png
- include/blocksadmin.inc.php
- include/config.php
- include/gtickets.php
- include/updateblock.inc.php
- sql (folder)
- sql/index.html
- sql/mytube.sql
- templates/blocks/mytube_block_banner.html

=========================================================
27.06.2009   1.05 Final  
=========================================================
- Fixed issue with vids displayed twice when using alternative categories
- Fixed issue with 'Aknowledge' & 'Confirmed' for broken video administration
- Modified template for random & recent block (horizontal)
- Timestamp multilanguage compatible

=========================================================